tests/baselines/reference/lateBoundAssignmentDeclarationSupport7.errors.txt
lateBoundAssignmentDeclarationSupport7.js(6,1): error TS7022: 'F[_sym]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
lateBoundAssignmentDeclarationSupport7.js(7,1): error TS7022: 'F[_str]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== usage.js (0 errors) ====
    const x = require("./lateBoundAssignmentDeclarationSupport7.js");
    const y = x.F["my-fake-sym"];
    const z = x.F[x.S];
    
==== lateBoundAssignmentDeclarationSupport7.js (2 errors) ====
    const _sym = Symbol();
    const _str = "my-fake-sym";
    
    function F() {
    }
    F[_sym] = "ok";
    ~~~~~~~~~~~~~~
!!! error TS7022: 'F[_sym]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    F[_str] = "ok";
    ~~~~~~~~~~~~~~
!!! error TS7022: 'F[_str]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    module.exports.F = F;
    module.exports.S = _sym;